PhotoStand/client/src/styles/BackgroundSelector.css
.conteiner-selecct {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 1080px;
  height: 1920px;
  max-width: 100vw;
  max-height: 100vh;
  margin: 0 auto;
  position: relative;
  background: transparent;
}

.background-selector-mask-wrapper {
  position: relative;
  margin-top: 260px;
  display: flex;
}

.background-selector-desc {
  position: absolute;
  left: 50%;
  top: 83%;
  transform: translateX(-50%);
  margin: 0;
}

.background-selector-btn {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  display: block;
  margin-top: auto;
  margin-bottom: 62px;
}

.background-selector-mask-btm-wrapper {
  position: absolute;
  width: 100%;
  bottom: 0;
  z-index: 2;
  display: block;
}

.background-selector-mask-btm {
  width: 100%;
  height: auto;
  display: block;
}

.background-selector-fill-image {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 99.5%;
  height: 99.5%;
  object-fit: cover;
  z-index: 1;
  pointer-events: none;
  display: block;
}

.background-selector-radio-group {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  gap: 16px;
  z-index: 3;
  pointer-events: auto;
}

.background-selector-radio-btn {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  outline: none;
  display: flex;
  align-items: center;
}

.btn-group {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  gap: 4px;
  margin-top: 320px;
}

